// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox - Snapshots > matches snapshot when checked 1`] = `
<button
  aria-checked="true"
  class="peer h-4 w-4 shrink-0 rounded border border-input bg-white/5 shadow-sm transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-brand data-[state=checked]:bg-brand"
  data-state="checked"
  id="radix-normalized"
  role="checkbox"
  type="button"
  value="on"
>
  <span
    class="flex items-center justify-center"
    data-state="checked"
    style="pointer-events: none;"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-check h-3.5 w-3.5 text-background"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="3"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 6 9 17l-5-5"
      />
    </svg>
  </span>
</button>
`;

exports[`Checkbox - Snapshots > matches snapshot when disabled 1`] = `
<button
  aria-checked="false"
  class="peer h-4 w-4 shrink-0 rounded border border-input bg-white/5 shadow-sm transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-brand data-[state=checked]:bg-brand"
  data-disabled=""
  data-state="unchecked"
  disabled=""
  id="radix-normalized"
  role="checkbox"
  type="button"
  value="on"
/>
`;

exports[`Checkbox - Snapshots > matches snapshot when disabled and checked 1`] = `
<button
  aria-checked="true"
  class="peer h-4 w-4 shrink-0 rounded border border-input bg-white/5 shadow-sm transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-brand data-[state=checked]:bg-brand"
  data-disabled=""
  data-state="checked"
  disabled=""
  id="radix-normalized"
  role="checkbox"
  type="button"
  value="on"
>
  <span
    class="flex items-center justify-center"
    data-disabled=""
    data-state="checked"
    style="pointer-events: none;"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-check h-3.5 w-3.5 text-background"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="3"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 6 9 17l-5-5"
      />
    </svg>
  </span>
</button>
`;

exports[`Checkbox - Snapshots > matches snapshot when unchecked 1`] = `
<button
  aria-checked="false"
  class="peer h-4 w-4 shrink-0 rounded border border-input bg-white/5 shadow-sm transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-brand data-[state=checked]:bg-brand"
  data-state="unchecked"
  id="radix-normalized"
  role="checkbox"
  type="button"
  value="on"
/>
`;

exports[`Checkbox - Snapshots > matches snapshot with default props 1`] = `
<button
  aria-checked="false"
  class="peer h-4 w-4 shrink-0 rounded border border-input bg-white/5 shadow-sm transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-brand data-[state=checked]:bg-brand"
  data-state="unchecked"
  id="radix-normalized"
  role="checkbox"
  type="button"
  value="on"
/>
`;

exports[`Checkbox - Snapshots > matches snapshot with label 1`] = `
<div
  class="flex items-start gap-2"
  data-testid="container"
>
  <button
    aria-checked="false"
    class="peer h-4 w-4 shrink-0 rounded border border-input bg-white/5 shadow-sm transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-brand data-[state=checked]:bg-brand"
    data-state="unchecked"
    id="radix-normalized"
    role="checkbox"
    type="button"
    value="on"
  />
  <div
    class="flex flex-col gap-1.5"
    data-testid="container"
  >
    <label
      class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 cursor-pointer text-base leading-none font-medium text-foreground peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
      data-slot="label"
      for="radix-normalized"
    >
      Test label
    </label>
  </div>
</div>
`;

exports[`Checkbox - Snapshots > matches snapshot with label and description 1`] = `
<div
  class="flex items-start gap-2"
  data-testid="container"
>
  <button
    aria-checked="false"
    class="peer h-4 w-4 shrink-0 rounded border border-input bg-white/5 shadow-sm transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-brand data-[state=checked]:bg-brand"
    data-state="unchecked"
    id="radix-normalized"
    role="checkbox"
    type="button"
    value="on"
  />
  <div
    class="flex flex-col gap-1.5"
    data-testid="container"
  >
    <label
      class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 cursor-pointer text-base leading-none font-medium text-foreground peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
      data-slot="label"
      for="radix-normalized"
    >
      Label
    </label>
    <p
      class="font-medium text-sm leading-normal text-muted-foreground"
      data-testid="typography"
    >
      Description text
    </p>
  </div>
</div>
`;

exports[`Checkbox - Snapshots > matches snapshot with label, description and checked 1`] = `
<div
  class="flex items-start gap-2"
  data-testid="container"
>
  <button
    aria-checked="true"
    class="peer h-4 w-4 shrink-0 rounded border border-input bg-white/5 shadow-sm transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-brand data-[state=checked]:bg-brand"
    data-state="checked"
    id="radix-normalized"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="flex items-center justify-center"
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-check h-3.5 w-3.5 text-background"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="3"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </span>
  </button>
  <div
    class="flex flex-col gap-1.5"
    data-testid="container"
  >
    <label
      class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 cursor-pointer text-base leading-none font-medium text-foreground peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
      data-slot="label"
      for="radix-normalized"
    >
      Checked label
    </label>
    <p
      class="font-medium text-sm leading-normal text-muted-foreground"
      data-testid="typography"
    >
      Description text
    </p>
  </div>
</div>
`;
